activeByDefault doesn't work if other profiles are selected

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,7 @@ jobs:
             - node-v5-
       - run:
           name: Build
-          command: mvn ${BUILD_ARGS} -T 1C -U -Pui,bundle clean install -Dskip.failsafe.tests=true -DskipTests=true
+          command: mvn ${BUILD_ARGS} -T 1C -U -Pui,bundle,services clean install -Dskip.failsafe.tests=true -DskipTests=true
       - save_cache:
           paths:
             - ~/.m2
@@ -118,7 +118,7 @@ jobs:
             if [[ -n "$SONARQUBE_TOKEN" ]]; then
               echo "Build and Sonar"
               export PATH=/home/circleci/apache-maven-3.6.1/bin:$PATH
-              export SONAR_TARGETS="-Pci org.jacoco:jacoco-maven-plugin:prepare-agent@default-prepare-agent surefire:test org.jacoco:jacoco-maven-plugin:report@default-report sonar:sonar"
+              export SONAR_TARGETS="-Pci,services org.jacoco:jacoco-maven-plugin:prepare-agent@default-prepare-agent surefire:test org.jacoco:jacoco-maven-plugin:report@default-report sonar:sonar"
               export SONAR_ARGS="-Dsonar.host.url=https://sonarcloud.io \
                   -Dsonar.organization=${CIRCLE_PROJECT_USERNAME} \
                   -Dsonar.login=${SONARQUBE_TOKEN}
@@ -225,7 +225,7 @@ jobs:
       - run:
           name: MySQL tests
           command: |
-            mvn ${BUILD_ARGS} -Pdbonly surefire:test \
+            mvn ${BUILD_ARGS} -Pdbonly,services surefire:test \
               -Dmorf.mysql.noadmin=true \
               -Dtestdb.url=mysql://open:sesame@127.0.0.1/test \
               -Dskip.failsafe.tests=true
@@ -249,6 +249,7 @@ jobs:
       - run:
           name: Deploy release to Docker registry
           command: |
+            export PROFILES="-Pui,docker,services"
             if [[ (-n "$DOCKERHUB_USER") && (-n "$DOCKERHUB_PASSWORD") ]]; then
               export DOCKER_TARGET="jib:build"
             else
@@ -257,16 +258,16 @@ jobs:
               export DOCKER_TARGET="jib:buildTar"
             fi
             if [[ -n "$CIRCLE_TAG" ]]; then
-              mvn ${BUILD_ARGS} -Pui,docker $DOCKER_TARGET -Ddocker.tag="$CIRCLE_TAG"
+              mvn ${BUILD_ARGS} $PROFILES $DOCKER_TARGET -Ddocker.tag="$CIRCLE_TAG"
             else
               if [[ "$CIRCLE_BRANCH" == "stable" ]]; then
-                mvn ${BUILD_ARGS} -Pui,docker $DOCKER_TARGET -Ddocker.tag="stable"
+                mvn ${BUILD_ARGS} $PROFILES $DOCKER_TARGET -Ddocker.tag="stable"
               else
                 if [[ (-z "$CIRCLE_BRANCH") || ("$CIRCLE_BRANCH" == "master") ]]; then
-                  mvn ${BUILD_ARGS} -Pui,docker $DOCKER_TARGET -Ddocker.tag="latest"
+                  mvn ${BUILD_ARGS} $PROFILES $DOCKER_TARGET -Ddocker.tag="latest"
                 else
                   echo "Branch. Building locally only"
-                  mvn ${BUILD_ARGS} -Pui,docker jib:buildTar -Ddocker.tag="dev-$CIRCLE_BRANCH"
+                  mvn ${BUILD_ARGS} $PROFILES jib:buildTar -Ddocker.tag="dev-$CIRCLE_BRANCH"
                 fi
               fi
             fi
