Delegate trading fully to the remote app

--- a/orko-integration-testing/src/test/resources/main-test-config.yml
+++ b/orko-integration-testing/src/test/resources/main-test-config.yml
@@ -1,6 +1,7 @@
 scriptSigningKey: "WHATEVS"
 remoteMarketData:
   webSocketUri: ws://localhost:8081/ws
+  exchangeEndpointUri: http://localhost:8081/data/exchanges
 server:
   type: simple
   rootPath: /main
