--- a/orko-integration-testing/src/test/resources/marketdata-test-config.yml
+++ b/orko-integration-testing/src/test/resources/marketdata-test-config.yml
@@ -38,6 +38,7 @@ jerseyClient:
 logging:
   loggers:
     "com.gruelbox.orko": INFO
+    "com.gruelbox.orko.exchange": DEBUG
     "si.mazi.rescu": ERROR
   appenders:
     - type: console
