--- a/orko-integration-testing/src/test/resources/main-test-config.yml
+++ b/orko-integration-testing/src/test/resources/main-test-config.yml
@@ -1,3 +1,4 @@
+childProcess: true
 scriptSigningKey: "WHATEVS"
 remoteMarketData:
   webSocketUri: ws://localhost:8081/ws
@@ -20,4 +21,4 @@ logging:
     "si.mazi.rescu": ERROR
   appenders:
     - type: console
-      logFormat: "MAIN - %-5p [%d{ISO8601,UTC} [%t] %c: %m%n%rEx"
+      logFormat: " - MAIN - %-5p [%t] %c: %m%n%rEx"
