--- a/orko-integration-testing/src/test/resources/marketdata-test-config.yml
+++ b/orko-integration-testing/src/test/resources/marketdata-test-config.yml
@@ -1,3 +1,4 @@
+childProcess: true
 scriptSigningKey: "WHATEVS"
 server:
   type: simple
@@ -41,4 +42,4 @@ logging:
     "si.mazi.rescu": ERROR
   appenders:
     - type: console
-      logFormat: "DATA - %-5p [%d{ISO8601,UTC}] [%t] %c: %m%n%rEx"
+      logFormat: "   - DATA - %-5p [%t] %c: %m%n%rEx"
