--- a/pom.xml
+++ b/pom.xml
@@ -143,12 +143,14 @@
           </plugin>
         </plugins>
       </build>
-      <dependency>
-        <groupId>org.sonarsource.java</groupId>
-        <artifactId>sonar-jacoco-listeners</artifactId>
-        <version>5.14.0.18788</version>
-        <scope>test</scope>
-      </dependency>
+      <dependencies>
+        <dependency>
+          <groupId>org.sonarsource.java</groupId>
+          <artifactId>sonar-jacoco-listeners</artifactId>
+          <version>5.14.0.18788</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
     </profile>
     <profile>
       <id>e2etest</id>
