--- a/pom.xml
+++ b/pom.xml
@@ -213,8 +213,8 @@
     <xchange.groupid>org.knowm.xchange</xchange.groupid>
     <xchange.version>4.4.1</xchange.version>
 
-    <xchange.stream.groupid>com.github.bitrich-info.xchange-stream</xchange.stream.groupid>
-    <xchange.stream.version>5e91c7b7e5021343f2417f232324fa3ebfc762f9</xchange.stream.version>
+    <xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>
+    <xchange.stream.version>4.4.1-SNAPSHOT</xchange.stream.version>
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.4</morf.version>
