--- a/pom.xml
+++ b/pom.xml
@@ -211,7 +211,7 @@
     <dropwizard.version>1.3.17</dropwizard.version>
 
     <xchange.groupid>org.knowm.xchange</xchange.groupid>
-    <xchange.version>4.4.1</xchange.version>
+    <xchange.version>4.4.2-SNAPSHOT</xchange.version>
 
     <xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>
     <xchange.stream.version>4.4.1-SNAPSHOT</xchange.stream.version>
