--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
         <checksumPolicy>warn</checksumPolicy>
       </releases>
       <snapshots>
-        <enabled>false</enabled>
+        <enabled>true</enabled>
         <updatePolicy>always</updatePolicy>
       </snapshots>
     </repository>
@@ -213,8 +213,9 @@
     <xchange.groupid>org.knowm.xchange</xchange.groupid>
     <xchange.version>4.4.2-SNAPSHOT</xchange.version>
 
-    <xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>
-    <xchange.stream.version>4.4.1-SNAPSHOT</xchange.stream.version>
+    <xchange.stream.groupid>com.github.badgerwithagun</xchange.stream.groupid>
+<!--    <xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>-->
+    <xchange.stream.version>xchange-442snapshot-SNAPSHOT</xchange.stream.version>
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.4</morf.version>
@@ -404,7 +405,7 @@
       <dependency>
         <groupId>org.jooq</groupId>
         <artifactId>jooq</artifactId>
-        <version>3.13.0</version>
+        <version>3.13.1</version>
       </dependency>
 
       <dependency>
