--- a/pom.xml
+++ b/pom.xml
@@ -213,7 +213,7 @@
     <xchange.groupid>org.knowm.xchange</xchange.groupid>
     <xchange.version>4.4.2-SNAPSHOT</xchange.version>
 
-    <xchange.stream.groupid>com.github.badgerwithagun</xchange.stream.groupid>
+    <xchange.stream.groupid>com.github.badgerwithagun.xchange-stream</xchange.stream.groupid>
 <!--    <xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>-->
     <xchange.stream.version>xchange-442snapshot-SNAPSHOT</xchange.stream.version>
 
