--- a/orko-db-testsupport/pom.xml
+++ b/orko-db-testsupport/pom.xml
@@ -37,6 +37,7 @@
     <dependency>
       <groupId>io.dropwizard</groupId>
       <artifactId>dropwizard-testing</artifactId>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
