--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
           <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
+              <includeTags>database</includeTags>
               <groups>com.gruelbox.orko.db.DatabaseTest</groups>
             </configuration>
           </plugin>
@@ -208,7 +209,8 @@
 
     <guice.version>4.2.2</guice.version>
     <autovalue.version>1.7</autovalue.version>
-    <dropwizard.version>1.3.17</dropwizard.version>
+    <dropwizard.version>2.0.2</dropwizard.version>
+    <junit.version>5.6.0</junit.version>
 
     <xchange.groupid>org.knowm.xchange</xchange.groupid>
     <xchange.version>4.4.2-SNAPSHOT</xchange.version>
@@ -249,28 +251,6 @@
         <version>${dropwizard.version}</version>
         <type>pom</type>
         <scope>import</scope>
-      </dependency>
-
-      <!-- Required by dropwizard on JDK9+ -->
-      <dependency>
-        <groupId>javax.activation</groupId>
-        <artifactId>activation</artifactId>
-        <version>1.1.1</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.xml.bind</groupId>
-        <artifactId>jaxb-api</artifactId>
-        <version>2.3.1</version>
-      </dependency>
-      <dependency>
-        <groupId>com.sun.xml.bind</groupId>
-        <artifactId>jaxb-core</artifactId>
-        <version>2.3.0.1</version>
-      </dependency>
-      <dependency>
-        <groupId>com.sun.xml.bind</groupId>
-        <artifactId>jaxb-impl</artifactId>
-        <version>2.3.2</version>
       </dependency>
 
       <dependency>
@@ -351,6 +331,24 @@
         <version>2.2</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>io.dropwizard</groupId>
+        <artifactId>dropwizard-testing</artifactId>
+        <version>${dropwizard.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.vintage</groupId>
+        <artifactId>junit-vintage-engine</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
 
       <dependency>
         <groupId>mysql</groupId>
@@ -422,6 +420,12 @@
         <groupId>com.warrenstrange</groupId>
         <artifactId>googleauth</artifactId>
         <version>1.4.0</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.bitbucket.b_c</groupId>
@@ -556,6 +560,7 @@
             <skipTests>${skip.surefire.tests}</skipTests>
             <argLine>${surefireArgLine}</argLine>
             <excludes>
+              <excludeTags>database</excludeTags>
               <exclude>**/*Integration.java</exclude>
             </excludes>
             <useSystemClassLoader>false</useSystemClassLoader>
