--- a/pom.xml
+++ b/pom.xml
@@ -95,8 +95,9 @@
           <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <includeTags>database</includeTags>
-              <groups>com.gruelbox.orko.db.DatabaseTest</groups>
+              <properties>
+                <includeTags>database</includeTags>
+              </properties>
             </configuration>
           </plugin>
         </plugins>
