--- a/pom.xml
+++ b/pom.xml
@@ -216,9 +216,8 @@
     <xchange.groupid>org.knowm.xchange</xchange.groupid>
     <xchange.version>4.4.2-SNAPSHOT</xchange.version>
 
-    <xchange.stream.groupid>com.github.badgerwithagun.xchange-stream</xchange.stream.groupid>
-<!--    <xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>-->
-    <xchange.stream.version>xchange-442snapshot-SNAPSHOT</xchange.stream.version>
+    <xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>-->
+    <xchange.stream.version>4.4.2-SNAPSHOT</xchange.stream.version>
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.4</morf.version>
