--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
         <checksumPolicy>warn</checksumPolicy>
       </releases>
       <snapshots>
-        <enabled>true</enabled>
+        <enabled>false</enabled>
         <updatePolicy>always</updatePolicy>
       </snapshots>
     </repository>
@@ -506,17 +506,17 @@
       </dependency>
       <dependency>
         <groupId>${xchange.stream.groupid}</groupId>
-        <artifactId>xchange-binance</artifactId>
+        <artifactId>xchange-stream-binance</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
       <dependency>
         <groupId>${xchange.stream.groupid}</groupId>
-        <artifactId>xchange-bitfinex</artifactId>
+        <artifactId>xchange-stream-bitfinex</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
       <dependency>
         <groupId>${xchange.stream.groupid}</groupId>
-        <artifactId>xchange-coinbasepro</artifactId>
+        <artifactId>xchange-stream-coinbasepro</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
     </dependencies>
