--- a/orko-ui/pom.xml
+++ b/orko-ui/pom.xml
@@ -22,25 +22,6 @@
   </dependencies>
 
   <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>com.mycila</groupId>
-          <artifactId>license-maven-plugin</artifactId>
-          <configuration>
-            <includes>
-              <include>**/*.js</include>
-              <include>src</include>
-            </includes>
-            <excludes>
-              <exclude>node_modules/**</exclude>
-              <exclude>node/**</exclude>
-              <exclude>build/**</exclude>
-            </excludes>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
     <resources>
       <resource>
         <targetPath>assets</targetPath>
@@ -52,6 +33,22 @@
       </resource>
     </resources>
     <plugins>
+      <plugin>
+        <groupId>com.mycila</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <configuration>
+          <header>../etc/HEADER</header>
+          <includes>
+            <include>**/*.js</include>
+            <include>src/**</include>
+          </includes>
+          <excludes>
+            <exclude>node_modules/**</exclude>
+            <exclude>node/**</exclude>
+            <exclude>build/**</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
