--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ restoremavencache: &restoremavencache
     - maven-repo-v5-
 mainenvironment: &mainenvironment
   MAVEN_OPTS: -Xmx3200m
-  BUILD_ARGS: -B -P!format -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+  BUILD_ARGS: -B -DskipFormat -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
 setup: &setup
   docker:
     - image: circleci/openjdk:11-jdk-browsers
