--- a/pom.xml
+++ b/pom.xml
@@ -251,10 +251,10 @@
     <junit.version>5.6.0</junit.version>
 
     <xchange.groupid>org.knowm.xchange</xchange.groupid>
-    <xchange.version>4.4.2-SNAPSHOT</xchange.version>
+    <xchange.version>4.4.2</xchange.version>
 
     <xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>
-    <xchange.stream.version>4.4.2-SNAPSHOT</xchange.stream.version>
+    <xchange.stream.version>4.4.2</xchange.stream.version>
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.4</morf.version>
