--- a/orko-end-to-end-testing/pom.xml
+++ b/orko-end-to-end-testing/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.gruelbox</groupId>
     <artifactId>orko-parent</artifactId>
-    <version>0.15.2</version>
+    <version>0.15.3-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
