--- a/orko-common/pom.xml
+++ b/orko-common/pom.xml
@@ -81,6 +81,10 @@
       <artifactId>auto-value</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.google.auto.value</groupId>
       <artifactId>auto-value-annotations</artifactId>
     </dependency>
