--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
         <checksumPolicy>warn</checksumPolicy>
       </releases>
       <snapshots>
-        <enabled>false</enabled>
+        <enabled>true</enabled>
         <updatePolicy>always</updatePolicy>
       </snapshots>
     </repository>
@@ -253,8 +253,8 @@
     <xchange.groupid>org.knowm.xchange</xchange.groupid>
     <xchange.version>4.4.2</xchange.version>
 
-    <xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>
-    <xchange.stream.version>4.4.3-SNAPSHOT</xchange.stream.version>
+    <xchange.stream.groupid>com.github.badgerwithagun.xchange-stream</xchange.stream.groupid>
+    <xchange.stream.version>refactor-non-blocking-SNAPSHOT</xchange.stream.version>
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.4</morf.version>
