--- a/pom.xml
+++ b/pom.xml
@@ -251,10 +251,7 @@
     <junit.version>5.6.1</junit.version>
 
     <xchange.groupid>org.knowm.xchange</xchange.groupid>
-    <xchange.version>4.4.2</xchange.version>
-
-    <xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>
-    <xchange.stream.version>4.4.2</xchange.stream.version>
+    <xchange.version>5.0.0-SNAPSHOT</xchange.version>
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.4</morf.version>
@@ -537,24 +534,24 @@
       </dependency>
 
       <dependency>
-        <groupId>${xchange.stream.groupid}</groupId>
+        <groupId>${xchange.groupid}</groupId>
         <artifactId>xchange-stream-core</artifactId>
-        <version>${xchange.stream.version}</version>
+        <version>${xchange.version}</version>
       </dependency>
       <dependency>
-        <groupId>${xchange.stream.groupid}</groupId>
+        <groupId>${xchange.groupid}</groupId>
         <artifactId>xchange-stream-binance</artifactId>
-        <version>${xchange.stream.version}</version>
+        <version>${xchange.version}</version>
       </dependency>
       <dependency>
-        <groupId>${xchange.stream.groupid}</groupId>
+        <groupId>${xchange.groupid}</groupId>
         <artifactId>xchange-stream-bitfinex</artifactId>
-        <version>${xchange.stream.version}</version>
+        <version>${xchange.version}</version>
       </dependency>
       <dependency>
-        <groupId>${xchange.stream.groupid}</groupId>
+        <groupId>${xchange.groupid}</groupId>
         <artifactId>xchange-stream-coinbasepro</artifactId>
-        <version>${xchange.stream.version}</version>
+        <version>${xchange.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
