--- a/pom.xml
+++ b/pom.xml
@@ -250,11 +250,9 @@
     <dropwizard.version>2.0.9</dropwizard.version>
     <junit.version>5.6.1</junit.version>
 
-    <xchange.groupid>org.knowm.xchange</xchange.groupid>
-    <xchange.version>5.0.0-SNAPSHOT</xchange.version>
+    <xchange.groupid>com.github.badgerwithagun.xchange</xchange.groupid>
+    <xchange.version>polling-wrapper-SNAPSHOT</xchange.version>
 
-    <xchange.stream.groupid>com.github.badgerwithagun.xchange</xchange.stream.groupid>
-    <xchange.stream.version>improve-rx-non-blocking-SNAPSHOT</xchange.stream.version>
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.4</morf.version>
 
