--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,7 +159,7 @@ jobs:
           command: sudo rm -rf /var/lib/apt/lists/* && sudo apt-get update -y
       - run:
           name: Install packages
-          command: sudo apt-get install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
+          command: sudo apt-get install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libgbm-dev
       - attach_workspace:
           at: /home/circleci
       - restore_cache: *restoremavencache
