--- a/orko-ui/package.json
+++ b/orko-ui/package.json
@@ -29,7 +29,7 @@
     "react-redux": "^7.2.2",
     "react-rnd": "^10.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "3.4.4",
     "react-table": "^6.11.5",
     "recompose": "^0.30.0",
     "reconnecting-websocket": "^4.4.0",
@@ -59,5 +59,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {}
 }
